--- a/guess.html
+++ b/guess.html
@@ -81,7 +81,17 @@
       </div>
   </div>
     <div class="tip-box" id="tipBox">你获得了一个提示</div>
+    <div class="button-container">
     <button id="restartButton">重新开始</button>
+    <button id="viewTop100Button">查看前100名</button>
+    </div>
+
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p id="top100Results"></p>
+  </div>
+</div>
     </div>
 
     <div id="fireworks"></div>
@@ -167,6 +177,7 @@
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了跳转portal的链接；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>猜测与提示的卡也可以前往portal进行确认了；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了指定模式，勾选后卡池仅有指定模式可能出现的卡牌；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了游戏结束后查看前100名的机制。<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了网页UI；<br>
 
            </li>
