--- a/guess.html
+++ b/guess.html
@@ -159,6 +159,7 @@
        <details>
            <summary>8. 过去的谜题</summary>
            <li>2023/08/12-lagb0tvw</li>
+           <li>2023/08/14-pOA2gPXd</li>
            <li>2023/08/13-e5YbrBKA</li>
            <li>2023/08/12-lagb0tvw</li>
            <li>2023/08/11-vxfre60c</li>
