--- a/guess.html
+++ b/guess.html
@@ -115,7 +115,8 @@
        <details>
            <summary>2. 如果我找不到某个卡牌怎么办？</summary>
            <p>如果找不到相应的卡牌，请检查输入的名称是否正确。数据库来自于shadowverseportal进行简化，因此可能有部分卡名称和国服采用的有出入。</p>
-           <p>一般来说，近似词提示中可以找到你想要的卡牌；如果找不到，或发现卡名出入太大，请联系作者。</p>
+           <p>你可以搜索部分卡名，然后在近似词提示中找你想要的卡牌；如果找不到，或发现卡名出入太大，请联系作者。</p>
+           <p>除此之外，你可以用"妖虹333"，"法金3费法术","鬼4血随从"的方式搜索。（该条正在优化中）</p>
        </details>
        <details>
            <summary>3. 具体而言，相似度是如何判定的?</summary>
@@ -173,13 +174,16 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/14</span>增加了基础模糊搜索；
+
+           <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/13</span>增加了几个新的任务和扳机判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了“揭露答案”按钮。；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了跳转portal的链接；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>猜测与提示的卡也可以前往portal进行确认了；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了指定模式，勾选后卡池仅有指定模式可能出现的卡牌；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了游戏结束后查看前100名的机制。<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了网页UI；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了网页UI；
 
            </li>
            <li style="margin-left: 20px;">
