--- a/guess.html
+++ b/guess.html
@@ -174,11 +174,14 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
-             <span style="display: inline-block; width: 140px;">2023/08/14</span>增加了基础模糊搜索；
+             <span style="display: inline-block; width: 140px;">2023/08/14</span>增加了基础模糊搜索；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了几个新的任务和扳机判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>加强了部分计数器和任务的关联；
+
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/13</span>增加了几个新的任务和扳机判定；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了“揭露答案”按钮。；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了“揭露答案”按钮；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了跳转portal的链接；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>猜测与提示的卡也可以前往portal进行确认了；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了指定模式，勾选后卡池仅有指定模式可能出现的卡牌；<br>
