--- a/guess.html
+++ b/guess.html
@@ -176,8 +176,9 @@
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/14</span>增加了基础模糊搜索；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了几个新的任务和扳机判定；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>加强了部分计数器和任务的关联；
-
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>加强了部分计数器和任务的关联；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了搜索鼠标悬浮时看看卡图的功能；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>即使卡名对上也会进行搜索，避免撞上不知名卡牌；
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/13</span>增加了几个新的任务和扳机判定；<br>
