--- a/guess.html
+++ b/guess.html
@@ -160,6 +160,7 @@
        <details>
            <summary>8. 过去的谜题</summary>
            <li>2023/08/12-lagb0tvw</li>
+           <li>2023/08/15-2NLp6wWx</li>
            <li>2023/08/14-pOA2gPXd</li>
            <li>2023/08/13-e5YbrBKA</li>
            <li>2023/08/12-lagb0tvw</li>
