--- a/guess.html
+++ b/guess.html
@@ -253,7 +253,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
-           <li>2023/08/12-lagb0tvw</li>
+           <li>2023/08/16-1A1atQNx</li>
            <li>2023/08/15-2NLp6wWx</li>
            <li>2023/08/14-pOA2gPXd</li>
            <li>2023/08/13-e5YbrBKA</li>
@@ -269,8 +269,11 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
-             <span style="display: inline-block; width: 140px;">2023/08/15</span>移除了基础模糊搜索，改为高级搜索；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了吟唱护符吟唱数判定；<br>
+             <span style="display: inline-block; width: 140px;">2023/08/16</span>移除了基础模糊搜索，改为高级搜索；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了吟唱护符吟唱数判定；
+
+             <li style="margin-left: 20px;">
+               <span style="display: inline-block; width: 140px;">2023/08/15</span>优化了部分词条判定；
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/14</span>增加了基础模糊搜索；<br>
