--- a/guess.html
+++ b/guess.html
@@ -271,7 +271,7 @@
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/16</span>移除了基础模糊搜索，改为高级搜索；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了吟唱护符吟唱数判定；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了扭蛋、自回手等词条的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>加强了扭蛋、自回手、奶敌、己方多豆等词条的判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许优化了部分任务词条的判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了重复词条合并的处理
 
