--- a/guess.html
+++ b/guess.html
@@ -253,6 +253,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+           <li>2023/08/17-I4XQG2eh</li>
            <li>2023/08/16-1A1atQNx</li>
            <li>2023/08/15-2NLp6wWx</li>
            <li>2023/08/14-pOA2gPXd</li>
