--- a/guess.html
+++ b/guess.html
@@ -235,7 +235,7 @@
        <details>
            <summary>5. 关于激奏、结晶、命运抉择变形</summary>
            <p>这些变形卡牌在对比中，基本分和技能分均会检查原卡和所有变形成的卡，尝试最高的一组配对方式，然后将其总分平均。</p>
-           <p>如果数量不符对不上，对不上的部分会减权，且计为0分。本体对上会有额外加权。</p>
+           <p>如果数量不符对不上，对不上的部分会减权，且计为0分。最高分有加权，本体对上会有额外加权。</p>
            <p>例：狂舞之刃·蒂欧涅对暴狂士兵时，会激奏2对激奏2，本体对本体；蒂欧涅的激奏7对不上。最终基本分+技能分为激奏2对比分+减权的激奏7得分+加权的本体得分
        </details>
        <details>
@@ -269,6 +269,12 @@
        <details>
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/17</span>优化了激奏结晶的打分标准，现在最高分有额外加权；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了复数词条的打分标准，现在多段同词条可以对上少段同词条，只是溢出部分分数会降为50%；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许优化了部分任务词条的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许调整了部分词条的加权分；
+
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/16</span>移除了基础模糊搜索，改为高级搜索；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了吟唱护符吟唱数判定；<br>
