--- a/guess.html
+++ b/guess.html
@@ -22,6 +22,10 @@
           <input type="checkbox" id="specifiedModeCheckbox" title="勾选此项以限制卡池仅限指定卡牌与指定卡牌可衍生的 token/无限制卡牌。">
           指定模式
         </label>
+          <label>
+          <input type="checkbox" id="lowModeCheckbox" title="勾选此项以在猜卡对象为1000名以后（指定模式为500名）时，依然公开详细名次与相似度。">
+          低相似度公开
+        </label>
 
         <div class="center-button">
           <button id="useSeedButton">开始游戏</button>
@@ -277,7 +281,9 @@
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了复数词条的打分标准，现在多段同词条可以对上少段同词条，只是溢出部分分数会降为50%；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许优化了部分任务词条的判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许调整了部分词条的加权分；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加额外轮次游戏；
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加额外轮次游戏；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了提示，提示给出的至少会是1000名以内的了（指定模式为500名）<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>现在默认名次1000名开外（指定模式为500名）不显示具体名字和相似度，可以通过勾选开关显示。
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/16</span>移除了基础模糊搜索，改为高级搜索；<br>
