--- a/guess.html
+++ b/guess.html
@@ -18,12 +18,12 @@
         </div>
         </div>
       <div class="mode-checkbox">
-        <label>
-          <input type="checkbox" id="specifiedModeCheckbox" title="勾选此项以限制卡池仅限指定卡牌与指定卡牌可衍生的 token/无限制卡牌。">
+        <label title="勾选此项以限制卡池仅限指定卡牌与指定卡牌可衍生的 token/无限制卡牌。">
+          <input type="checkbox" id="specifiedModeCheckbox">
           指定模式
         </label>
-          <label>
-          <input type="checkbox" id="lowModeCheckbox" title="勾选此项以在猜卡对象为1000名以后（指定模式为500名）时，依然公开详细名次与相似度。">
+          <label title="勾选此项以在猜卡对象为1000名以后（指定模式为500名）时，依然公开详细名次与相似度。">
+          <input type="checkbox" id="lowModeCheckbox">
           低相似度公开
         </label>
 
