--- a/guess.html
+++ b/guess.html
@@ -58,7 +58,7 @@
         </div>
 
         <div id="advancedSearchButton">
-          <span>高级搜索</span>
+          <span id="advancedSearchSec">高级搜索</span>
           <span id="toggleIcon">+</span>
         </div>
 
