--- a/guess.html
+++ b/guess.html
@@ -147,8 +147,15 @@
                 <input type="text" id="race">
               </td>
 
+            </tr>
+            <tr>
               <td>
                 <label for="description">描述文字：</label>
+                <input type="text" id="description">
+              </td>
+
+              <td>
+                <label for="antiDescription">排除文字：</label>
                 <input type="text" id="description">
               </td>
             </tr>
@@ -289,9 +296,10 @@
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许优化了部分任务词条的判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许调整了部分词条的加权分；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加额外轮次游戏；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了提示，提示给出的至少会是1000名以内的了（指定模式为500名）<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>现在默认名次1000名开外（指定模式为500名）不显示具体名字和相似度，可以通过勾选开关显示。<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了无token模式
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了提示，提示给出的至少会是1000名以内的了（指定模式为500名）；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>现在默认名次1000名开外（指定模式为500名）不显示具体名字和相似度，可以通过勾选开关显示；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了无token模式<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>高级搜索支持空格分割多个文字，增加了排除描述
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/16</span>移除了基础模糊搜索，改为高级搜索；<br>
