--- a/guess.html
+++ b/guess.html
@@ -156,7 +156,7 @@
 
               <td>
                 <label for="antiDescription">排除文字：</label>
-                <input type="text" id="description">
+                <input type="text" id="antiDescription">
               </td>
             </tr>
           </table>
