--- a/guess.html
+++ b/guess.html
@@ -149,12 +149,12 @@
 
             </tr>
 
-                        <tr>
-                          <td>
-                            <label for="description">描述文字：</label>
-                            <input type="text" id="description">
-                          </td>
-                        </tr>
+            <tr>
+              <td>
+                <label for="description">描述文字：</label>
+                <input type="text" id="description">
+              </td>
+            </tr>
             <tr>
               <td>
                 <label for="antiDescription">排除文字：</label>
@@ -275,6 +275,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+           <li>2023/08/19-xzKZkwgT</li>
            <li>2023/08/18-n0ZUjN1I</li>
            <li>2023/08/17-I4XQG2eh</li>
            <li>2023/08/16-1A1atQNx</li>
@@ -293,7 +294,10 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
-             <span style="display: inline-block; width: 140px;">2023/08/17</span>优化了激奏结晶的打分标准，现在最高分有额外加权；<br>
+             <span style="display: inline-block; width: 140px;">2023/08/19</span>优化了部分词条判定；
+
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/18</span>优化了激奏结晶的打分标准，现在最高分有额外加权；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了复数词条的打分标准，现在多段同词条可以对上少段同词条，只是溢出部分分数会降为50%；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许优化了部分任务词条的判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许调整了部分词条的加权分；<br>
