--- a/guess.html
+++ b/guess.html
@@ -275,6 +275,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+           <li>2023/08/20-cA2n4HCS</li>
            <li>2023/08/19-xzKZkwgT</li>
            <li>2023/08/18-n0ZUjN1I</li>
            <li>2023/08/17-I4XQG2eh</li>
