--- a/guess.html
+++ b/guess.html
@@ -295,7 +295,8 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
-             <span style="display: inline-block; width: 140px;">2023/08/20</span>更新了dlc包；
+             <span style="display: inline-block; width: 140px;">2023/08/20</span>更新了dlc包；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了重复词条计算
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/19</span>优化了部分词条判定；
