--- a/guess.html
+++ b/guess.html
@@ -297,7 +297,8 @@
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/20</span>更新了dlc包；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了重复词条计算<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了部分检查（血量、攻击、费用）词条
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了部分检查（血量、攻击、费用）词条<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了进化词条，增加了进化自己/其他随从/全体随从的区别
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/19</span>优化了部分词条判定；
