--- a/guess.html
+++ b/guess.html
@@ -298,7 +298,8 @@
              <span style="display: inline-block; width: 140px;">2023/08/20</span>更新了dlc包；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了重复词条计算<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了部分检查（血量、攻击、费用）词条<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了进化词条，增加了进化自己/其他随从/全体随从的区别
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了进化词条，增加了进化自己/其他随从/全体随从的区别<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>优化了名字搜索，完全包含搜索名/被搜索名完全包含/完美符合搜索名会更为前置
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/19</span>优化了部分词条判定；
