--- a/guess.html
+++ b/guess.html
@@ -297,7 +297,7 @@
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/21</span>优化了部分词条判定；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>因为算法更先进了，调整了权重
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>因为算法更先进了，调整了权重；
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/20</span>更新了密斯塔尔希亚dlc包；<br>
