--- a/artifactMusic.html
+++ b/artifactMusic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="trash.css">
+    <link rel="stylesheet" href="artifactMusic.css">
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap">
     <title>Trash Music</title>
 </head>
@@ -24,6 +24,6 @@
         </div>
     </div>
     <audio id="audioPlayer"></audio>
-    <script src="trash.js"></script>
+    <script src="artifactMusic.js"></script>
 </body>
 </html>
