--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
 <span> - 测试你是否对影之诗的卡池足够了解</span>
 </li>
 
+<li>
+    <a href="artifactMusic.html">造物音乐</a>
+    <span> - 你可以用造物的叫声来制作音(zao)乐(sheng)了</span>
+</li>
+
 <hr> <!-- 这是分割线 -->
 
         <li>
@@ -89,7 +94,7 @@
             <a href="https://space.bilibili.com/1058046640" target="_blank">典狱长的阿b地址</a>
             <span> - 没什么，我只是觉得你们都应该认识一下全职业100的典狱长</span>
         </li>
-        
+
 
 
     </ul>
