--- a/guess.html
+++ b/guess.html
@@ -275,6 +275,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+           <li>2023/08/23-yDQPhyzC</li>
            <li>2023/08/22-xra5I6AU</li>
            <li>2023/08/21-f9JBXF8W</li>
            <li>2023/08/20-cA2n4HCS</li>
@@ -296,6 +297,9 @@
        <details>
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/23</span>去除了部分贴其他随从buff的“己方战场随从数”词条；
+
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/21</span>优化了部分词条判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>因为算法更先进了，调整了权重；
