--- a/guess.html
+++ b/guess.html
@@ -275,6 +275,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+           <li>2023/08/24-sgSEButT</li>
            <li>2023/08/23-yDQPhyzC</li>
            <li>2023/08/22-xra5I6AU</li>
            <li>2023/08/21-f9JBXF8W</li>
