--- a/guess.html
+++ b/guess.html
@@ -299,6 +299,9 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/25</span>增加了更多伤害词条的区分；
+
+           <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/23</span>去除了部分贴其他随从buff的“己方战场随从数”词条；
 
            <li style="margin-left: 20px;">
