--- a/guess.html
+++ b/guess.html
@@ -304,7 +304,8 @@
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/28</span>优化了部分打分机制；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>可以选择破坏己方（非强制）的也加入了自杀词条。
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>可以选择破坏己方（非强制）的也加入了自杀词条。<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>时点不再重复计算。
 
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/25</span>增加了更多伤害词条的区分；
