--- a/guess.html
+++ b/guess.html
@@ -275,6 +275,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+  <li>2023/08/29-tTiIIveh</li>
 <li>2023/08/28-rfijFKn7</li>
 <li>2023/08/27-ngn5Z2QK</li>
 <li>2023/08/26-xTE87R2i</li>
@@ -302,6 +303,9 @@
        <details>
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/29</span>套娃类重处理：依然算母类，只是额外增加'套娃'词条
+
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/28</span>优化了部分打分机制；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>可以选择破坏己方（非强制）的也加入了自杀词条。<br>
