--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 </li>
 
 <li>
+<a href="guess.html">影之诗认图（beta）</a>
+<span> - 测试你是否对影之诗的卡图足够了解</span>
+</li>
+
+<li>
     <a href="artifactMusic.html">造物音乐</a>
     <span> - 你可以用造物的叫声来制作音(zao)乐(sheng)了</span>
 </li>
