--- a/picGuess.html
+++ b/picGuess.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>影之诗卡牌大师</title>
+  <title>影之诗舔卡大师</title>
   <link rel="stylesheet" href="picGuess.css">
 </head>
 <body>
 
   <div id="intro">
-    <h1>影之诗卡牌大师</h1>
+    <h1>影之诗舔卡大师</h1>
     <p>规则：你将会看到一张随机的影之诗卡牌图像。猜测它是哪个职业的卡牌。</p>
     <p>如果猜对，你将得分一分。如果猜错，游戏结束。</p>
-    <p>当分数提高后，图片可能会出现灰度以进行干扰。</p>
+    <p>当分数提高后，图片可能会出现灰度、模糊、过曝光、过饱和等以进行干扰。</p>
+    <p>来试试你是否真的卡面烧成灰都认识吧！</p>
+    <p>（因为需要加载图片，需要一定网速支持，网页会预加载最多20张。）</p>
     <button id="startBtn">开始游戏</button>
   </div>
 
