--- a/guess.html
+++ b/guess.html
@@ -275,6 +275,8 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+
+           <li>2023/08/30-Ay1QXUXG</li>
   <li>2023/08/29-tTiIIveh</li>
 <li>2023/08/28-rfijFKn7</li>
 <li>2023/08/27-ngn5Z2QK</li>
