--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </li>
 
 <li>
-<a href="guess.html">影之诗认图（beta）</a>
+<a href="picGuess.html">影之诗认图（beta）</a>
 <span> - 测试你是否对影之诗的卡图足够了解</span>
 </li>
 
