--- a/picGuess.html
+++ b/picGuess.html
@@ -10,8 +10,9 @@
     <h1>影之诗舔卡大师</h1>
     <p>规则：你将会看到一张随机的影之诗卡牌图像。猜测它是哪个职业的卡牌。</p>
     <p>如果猜对，你将得分一分。如果猜错，游戏结束。</p>
-    <p>当分数提高后，图片可能会出现灰度、模糊、过曝光、过饱和等以进行干扰。</p>
-    <p>来试试你是否真的卡面烧成灰都认识吧！</p>
+    <p>标准模式下，当分数提高后，图片可能会出现灰度、模糊、过曝光、过饱和等以进行干扰。</p>
+    <p>新手模式不会出现干扰，适合推荐给你不玩szb的朋友，或者入坑较晚卡认的不多的玩家。</p>
+    <p>恐怖模式下，会有很强的干扰，试试你是否卡烧成灰也认得出吧！</p>
     <p>（因为需要加载图片，需要一定网速支持，网页会预加载最多20张。）</p>
     <div class="mode-checkbox">
       <label title="勾选此项以限制卡池仅限指定卡牌与指定卡牌可衍生的 token/无限制卡牌。">
