--- a/picGuess.html
+++ b/picGuess.html
@@ -9,7 +9,7 @@
   <div id="intro">
     <h1>影之诗舔卡大师</h1>
     <p>规则：你将会看到一张随机的影之诗卡牌图像。猜测它是哪个职业的卡牌。</p>
-    <p>如果猜对，你将得分一分。如果猜错，游戏结束。</p>
+    <p>如果猜对，你将得一分。如果猜错，游戏结束。</p>
     <p>标准模式下，当分数提高后，图片可能会出现灰度、模糊、过曝光、过饱和等以进行干扰。</p>
     <p>新手模式不会出现干扰，适合推荐给你不玩szb的朋友，或者入坑较晚卡认的不多的玩家。</p>
     <p>恐怖模式下，会有很强的干扰，试试你是否卡烧成灰也认得出吧！</p>
@@ -48,8 +48,8 @@
           <a href="guess.html">猜卡部门</a>
       </li></div>
 
+  <script src="https://unpkg.com/fast-average-color/dist/index.browser.min.js"></script>
   <script src="library/database.js"></script>
   <script src="picGuess.js"></script>
-
 </body>
 </html>
