--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
 <span> - 测试你是否对影之诗的卡图足够了解</span>
 </li>
 
+<hr> <!-- 这是分割线 -->
+
+<li>
+<a href="tokens.html">影之诗Token</a>
+<span> - 查看所有影之诗被衍生的卡牌（包括可加入构筑的卡牌与自衍生）被调用的次数</span>
+</li>
+
 <li>
     <a href="artifactMusic.html">造物音乐</a>
     <span> - 你可以用造物的叫声来制作音(zao)乐(sheng)了</span>
