--- a/guess.html
+++ b/guess.html
@@ -275,32 +275,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
-
-           <li>2023/08/30-Ay1QXUXG</li>
-  <li>2023/08/29-tTiIIveh</li>
-<li>2023/08/28-rfijFKn7</li>
-<li>2023/08/27-ngn5Z2QK</li>
-<li>2023/08/26-xTE87R2i</li>
-<li>2023/08/25-sgSEButT</li>
-<li>2023/08/24-yDQPhyzC</li>
-<li>2023/08/23-xra5I6AU</li>
-<li>2023/08/22-xVLRLNCd</li>
-<li>2023/08/21-f9JBXF8W</li>
-<li>2023/08/20-cA2n4HCS</li>
-<li>2023/08/19-xzKZkwgT</li>
-<li>2023/08/18-n0ZUjN1I</li>
-<li>2023/08/17-I4XQG2eh</li>
-<li>2023/08/16-1A1atQNx</li>
-<li>2023/08/15-2NLp6wWx</li>
-<li>2023/08/14-pOA2gPXd</li>
-<li>2023/08/13-e5YbrBKA</li>
-<li>2023/08/12-lagb0tvw</li>
-<li>2023/08/11-vxfre60c</li>
-<li>2023/08/10-gomsuRRv</li>
-<li>2023/08/09-WFXRB5fj</li>
-<li>2023/08/08-0ElHftw2</li>
-<li>2023/08/07-e5qHb1IB</li>
-<li>2023/08/06-Vrut4aWV</li>
+           <p id="functionContent"></p>
        </details>
        <details>
          <summary>9. 更新记录</summary>
