--- a/puzzle.html
+++ b/puzzle.html
@@ -19,9 +19,10 @@
         </div>
     </div>
 
-    <div id="gameBox" class="hidden">
+    <div id="gameBox">
       <div id="cSeed">
       <p id="currentSeed">当前种子：</p>
+      <p id="bestMove">最佳步数：计算中</p>
       </div>
         <div id="path">
             <!-- 路径信息将在游戏中动态更新 -->
@@ -38,6 +39,8 @@
         <div id="result" class="hidden">
             <!-- 游戏结果将在游戏结束后显示 -->
         </div>
+        <button id="reverseButton">翻转推理方向</button>
+        <button id="undoButton">撤回该方向上一步</button>
         <a href="https://shadowverse-portal.com/cards?format=1&lang=zh-tw" target="_blank" id="link-button">前往 Shadowverse Portal</a>
     </div>
 
@@ -48,5 +51,6 @@
     <script src="puzzleButtons.js"></script>
     <script src="similarity.js"></script>
     <script src="puzzle.js"></script>
+
 </body>
 </html>
