--- a/puzzle.html
+++ b/puzzle.html
@@ -45,7 +45,7 @@
     </div>
 
     <script src="library/database.js"></script>
-    <script src="library/subdatabase.js"></script>
+    <script src="library/subDatabase.js"></script>
     <script src="library/ratioTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
     <script src="puzzleButtons.js"></script>
