--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 <span> - 测试你是否对影之诗的卡图足够了解</span>
 </li>
 
+<li>
+<a href="puzzle.html">影之诗关联（beta）</a>
+<span> - 测试你是否对影之诗的卡包与token足够了解</span>
+</li>
+
 <hr> <!-- 这是分割线 -->
 
 <li>
