--- a/guess.html
+++ b/guess.html
@@ -281,6 +281,10 @@
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/09/05</span>调整了自buff判定：减费和增幅类不再归入此类
+
+
+           <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/29</span>套娃类重处理：依然算母类，只是额外增加'套娃'词条
 
            <li style="margin-left: 20px;">
