--- a/puzzle.html
+++ b/puzzle.html
@@ -41,6 +41,7 @@
         </div>
         <button id="reverseButton">翻转推理方向</button>
         <button id="undoButton">撤回该方向上一步</button>
+        <button id="calcButton">计算最佳步数</button>
         <a href="https://shadowverse-portal.com/cards?format=1&lang=zh-tw" target="_blank" id="link-button">前往 Shadowverse Portal</a>
     </div>
 
