--- a/puzzle.html
+++ b/puzzle.html
@@ -7,6 +7,7 @@
     <title>寻找关联</title>
 </head>
 <body>
+  <h1>影之诗转动大师（beta）</h1>
     <div id="startBox">
         <div id="subStartBox">
             <button id="randomSeedButton">今日谜题种子</button>
@@ -22,7 +23,7 @@
     <div id="gameBox">
       <div id="cSeed">
       <p id="currentSeed">当前种子：</p>
-      <p id="bestMove">最佳步数：计算中</p>
+      <p id="bestMove"></p>
       </div>
         <div id="path">
             <!-- 路径信息将在游戏中动态更新 -->
@@ -39,11 +40,22 @@
         <div id="result" class="hidden">
             <!-- 游戏结果将在游戏结束后显示 -->
         </div>
-        <button id="reverseButton">翻转推理方向</button>
-        <button id="undoButton">撤回该方向上一步</button>
-        <button id="calcButton">计算最佳步数</button>
-        <a href="https://shadowverse-portal.com/cards?format=1&lang=zh-tw" target="_blank" id="link-button">前往 Shadowverse Portal</a>
+        <div id="buttons">
+          <button id="reverseButton">翻转推理方向</button>
+          <button id="undoButton">撤回该方向上一步</button>
+          <a href="https://shadowverse-portal.com/cards?format=1&lang=zh-tw" target="_blank" id="link-button">前往 Shadowverse Portal</a>
+        </div>
     </div>
+    <div id="ruleBox">
+        <h2>游戏规则</h2>
+        <p>1. 游戏开始后，根据选择的种子，系统会随机选择两张卡牌作为起始卡和目标卡。</p>
+        <p>2. 您的任务是找出一条这两张卡牌之间的关联路径。</p>
+        <p>3. 您可以通过点击相关按钮来选择可能的卡牌关联方式，随后在符合条件的卡中选择你需要的那一张。</p>
+        <p>4. 目前版本，关联路径可以是同卡包同职业卡，衍生/被衍生关系，或者是重印卡。</p>
+        <p>5. 重印的定义为完全一样效果和名字，只有卡图不同的卡（不计异画）。</p>
+        <p>6. 你可以调转方向从结果倒推。如果出现了失误，可以撤回一步。</p>
+    </div>
+
 
     <script src="library/database.js"></script>
     <script src="library/subDatabase.js"></script>
