--- a/puzzle.html
+++ b/puzzle.html
@@ -56,6 +56,13 @@
         <p>6. 你可以调转方向从结果倒推。如果出现了失误，可以撤回一步。</p>
     </div>
 
+    <div class="footer" id="other">         <li>
+          <span> 其他神秘内容 -</span>
+            <a href="yuwan.html">听声辨卡部门</a>
+            <a href="guess.html">猜卡部门</a>
+            <a href="picGuess.html">卡图部门</a>
+        </li></div>
+
 
     <script src="library/database.js"></script>
     <script src="library/subDatabase.js"></script>
