--- a/guess.html
+++ b/guess.html
@@ -395,6 +395,7 @@
          <span> 其他神秘内容 -</span>
            <a href="yuwan.html">听声辨卡部门</a>
            <a href="picGuess.html">卡图部门</a>
+           <a href="puzzle.html">关联部门</a>
        </li></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
