--- a/picGuess.html
+++ b/picGuess.html
@@ -46,6 +46,7 @@
         <span> 其他神秘内容 -</span>
           <a href="yuwan.html">听声辨卡部门</a>
           <a href="guess.html">猜卡部门</a>
+          <a href="puzzle.html">关联部门</a>
       </li></div>
 
   <script src="https://unpkg.com/fast-average-color/dist/index.browser.min.js"></script>
